# touchscreen-autodisabler

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  touchscreen-autodisabler.service  touchscreen-autodisabler.service.in  wsid.Tad.service.in
man/: Makefile.am  touchscreen-autodisabler.7  touchscreen-autodisabler.7.markdown
man/ko/: touchscreen-autodisabler.7  touchscreen-autodisabler.7.markdown
po/: Makevars  POTFILES.in  ko.po
src/: Makefile.am  main.c  tad_app.c  tad_app.h  tad_def.h  tad_device.c  tad_device.h  tad_enumtypes.c.template  tad_enumtypes.h.template  tad_statemachine.c  tad_statemachine.h  tad_util.c  tad_util.h  touchscreen-autodisabler  wsid.Tad.dbus.xml  wsid.Tad.gresources.xml  wsid.Tad.gschema.xml
